@@ -29,8 +29,14 @@
         &subject=`[[getContextSetting:default=`[[++google_analytics_ua]]`? &context=`[[*context_key]]` &setting=`google_analytics_ua`]]`
         &operator=`notempty`
         &then=`$googleAnalytics`
-        &else=``
     ]]]]
+
+    [[If?
+        &subject=`[[++romanesco.private_backyard]]`
+        &operator=`EQ`
+        &operand=`1`
+        &then=`[[!checkPermissions? &context=`hub`]]`
+    ]]
 
     [[$structuredDataSite]]
 </head>
