@@ -1,10 +1,25 @@
 <?php
-$pm = array('list' => true);
+$context = $modx->getOption('context', $scriptProperties, $modx->context->get('key'));
+$redirectTo = $modx->getOption('redirectTo', $scriptProperties, null);
 
-if ($modx->user->isAuthenticated('kb')) {
-    if (!$modx->hasPermission('list')) {
-        return 0;
+// If a context is specified, make sure we're in it
+if ($context !== $modx->context->get('key')) {
+    return '';
+}
+
+// Exclude the unauthorized page from any redirects
+if ($modx->resource->get('id') == $modx->getOption('unauthorized_page')) {
+    return '';
+}
+
+if (!$modx->user->hasSessionContext($context)) {
+    if (!empty($redirectTo)) {
+        $redirectParams = !empty($redirectParams) ? $modx->fromJSON($redirectParams) : '';
+        $url = $modx->makeUrl($redirectTo,'',$redirectParams,'full');
+        $modx->sendRedirect($url);
     } else {
-        return $modx->user->get('username');
+        $modx->sendUnauthorizedPage();
     }
 }
+
+return '';
