@@ -8,6 +8,8 @@ New features:
 - Exclude members only submenu items in vertical nav and KB overviews
 
 Fixes and improvements:
+- Add setting to make project hub private (require login)
+- Load Google Analytics if configuration / context setting is set
 - Fix snippet not found errors for empty fastField tags in MODX 2.6
 - Regulate MIME type of Markdown resources with plugin
 
